# mustiolo

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  ROADMAP.md  pyproject.toml
.github/workflows/: release.yaml
examples/: .simple_example.py.swp  example.py  simple_example.py  subcmd_examples.py
examples/multifile/: README.md  cli.py  greeting_command.py  math_commands.py
src/mustiolo/: cli.py  exception.py  menu.py  message_box.py  utils.py
src/mustiolo/models/: command.py  menu.py  parameters.py
src/tinycli/: example.py  main.py  tinycli.py
tests/: test_commands.py
tiny-cli/: example.py  main.py  message_box.py
